--- a/starter-code/public/stylesheets/styles.css
+++ b/starter-code/public/stylesheets/styles.css
@@ -5,10 +5,20 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+* {
+    padding: 0;
+    margin: 0;
+}
 
+body{
+    display: block;
+    padding-top: 3rem;
+}
 
 .beer-image {
-    width: 40px;
+    height: 40vh;
+    margin: 4rem;
+    padding-left: 3rem;
 }
 
 .header{
@@ -18,23 +28,19 @@ font-family: Arial, Helvetica, sans-serif;
 
 .footer{
     margin-top: 10px;
-    /* position: absolute; */
+
     bottom: 0;
     width: 100%;
     background-color: #0a2c42;
     color:#f7f9f9;
 }
 
-.content {
-    margin: 70px 0 0 20px;
-    min-height: 550px;
-}
-
 .beers-container {
-    display: block;
-    margin: auto;
+    /* display: block; */
 }
-
+.beer-holder{
+    /* width: 30vw; */
+}
 .beer-holder img {
     height: 200px;
     background-size: contain;
@@ -54,7 +60,8 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 .index{
-    margin: 150px;
+    min-height: 85vh;
+
 }
 
 .btn{
