--- a/starter-code/views/index.hbs
+++ b/starter-code/views/index.hbs
@@ -1,6 +1,14 @@
 <div class="index">
-<div class="d-flex flex-row justify-content-center align-items-center"> <img class="beer" src="/images/beer.png"></div>
-<div class="d-flex flex-row justify-content-center align-items-center"> <a type="button" class="btn btn1" href="/beers">Check the Beers!</a></div>
-<div class="d-flex flex-row justify-content-center align-items-center"> <a type="button" class="btn btn1" href="/random-beers">Check a Random Beer!</a></div>
-
+ <div class="d-flex flex-row justify-content-center align-items-center"> <img class="beer-image" src="/images/beer.png">
+ </div>
+ <div class="d-flex flex-row justify-content-center align-items-center">
+  <a type="button" class="btn btn-primary" href="/beers">
+   Check the Beers!
+  </a>
+ </div>
+ <div class="d-flex flex-row justify-content-center align-items-center">
+  <a type="button" class="btn btn-primary" href="/random-beers">
+   Check a Random Beer!
+  </a>
+ </div>
 </div>
