--- a/starter-code/views/partials/beerpartial.hbs
+++ b/starter-code/views/partials/beerpartial.hbs
@@ -1,13 +1,12 @@
-
-<div >
-<a class='beer-holder' href="/beers/{{id}}">
-
+<div>
+    <div class='beer-holder'>
         <img src="{{image_url}}" alt="">
         <div class="text-info">
-            <h3>{{name}}</h3>
+            <a href="/beers/{{id}}">
+                <h3>{{name}}</h3>
+            </a>
             <h4>{{tagline}}</h4>
             <p>{{description}}</p>
         </div>
-
-</a>
+    </div>
 </div>
